<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/dark_gray"
    android:padding="8dp">

    <TextView
        android:id="@+id/MovieItemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/movietitle"
        android:textColor="@color/light_red"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/MovieItemImage"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/MovieItemImage"
        app:layout_constraintTop_toBottomOf="@+id/MovieItemImage"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/MovieItemImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/movie_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/MovieItemRatinfStar"
        android:layout_width="62dp"
        android:layout_height="55dp"
        android:background="@android:drawable/btn_star"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/rating_demo"
        android:textColor="@color/light_red"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/MovieItemImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/MovieItemImage"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>