<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    tools:context=".MoviePage">

    <TextView
        android:id="@+id/red_background"
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:background="@color/dark_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/MoviePageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@color/dark_red"
        android:fontFamily="sans-serif-black"
        android:gravity="start"
        android:text="@string/movietitle"
        android:textColor="@color/light_gray"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/BackButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@color/dark_gray"
        android:textColor="@color/light_gray"
        android:textSize="15sp"
        app:backgroundTint="@color/dark_red"
        app:icon="@drawable/abc_vector_test"
        app:iconPadding="8dp"
        app:iconTint="@color/light_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/MoviePagemageView"
        android:layout_width="187dp"
        android:layout_height="266dp"
        android:layout_marginEnd="280dp"
        android:layout_marginRight="280dp"
        android:contentDescription="@string/movie_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.389"
        tools:ignore="ImageContrastCheck"
        android:padding="8dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/MoviePagelRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="100dp"
        android:background="@color/dark_red"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/rating"
        android:textColor="@color/light_gray"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/ReleaseDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toEndOf="@+id/MoviePagemageView"
        app:layout_constraintTop_toBottomOf="@+id/MoviePageTitle" />

    <TextView
        android:id="@+id/ReleaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/dark_red"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/release_date"
        android:textColor="@color/light_gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.377"
        app:layout_constraintStart_toEndOf="@+id/MoviePagemageView"
        app:layout_constraintTop_toBottomOf="@+id/MoviePagelRating" />

    <TextView
        android:id="@+id/Description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:fontFamily="sans-serif-light"
        android:gravity="start"
        android:text="@string/description_demo"
        android:textColor="@color/light_gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MoviePagemageView"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>